--- a/formations.html
+++ b/formations.html
@@ -3,48 +3,50 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 4 et 5 Septembre 2018 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "4 <span>et</span> 5"
-      badge-down: "Septembre<br/>2018"
-    - link: "/formations/XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 26 au 28 Septembre 2018 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: "26 <span>au</span> 28"
-      badge-down: "Septembre<br/>2018"
+    - link: "/formations/Kubernetes.html"
+      img: "/images/formations/kubernetes.png"
+      title: "Kubernetes"
+      fulltitle: "Formation Kubernetes : 11 et 12 Décembre 2018 Paris"
+      short: "Formation Kubernetes 2 jours"
+      badge-up: "11 <span>et</span> 12"
+      badge-down: "Décembre<br/>2018"
     - link: "/formations/XL-Release.html"
       img: "/images/formations/xl-release.png"
       title: "XL Release"
-      fulltitle: "Formation XL Release : 2 et 3 Octobre 2018 Paris"
+      fulltitle: "Formation XL Release : 13 et 14 Décembre 2018 Paris"
       short: "Formation XL Release 2 jours"
-      badge-up: "2 <span>et</span> 3"
-      badge-down: "Octobre<br/>2018"
-    - link: "/formations/Docker-Kubernetes.html"
-      img: "/images/formations/docker-kubernetes.png"
-      title: "Docker et Kubernetes"
-      fulltitle: "Formation Docker et Kubernetes : 15 au 17 Octobre 2018 Paris"
-      short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "15 <span>au</span> 17"
-      badge-down: "Octobre<br/>2018"
-    - link: "/formations/Ansible.html"
-      img: "/images/formations/ansible.png"
-      title: "Ansible"
-      fulltitle: "Formation Ansible : 29 et 30 Octobre 2018 Paris"
-      short: "Formation Ansible 2 jours"
-      badge-up: "29 <span>et</span> 30"
-      badge-down: "Octobre<br/>2018"
+      badge-up: "13 <span>et</span> 14"
+      badge-down: "Décembre<br/>2018"
     - link: "/formations/Terraform.html"
       img: "/images/formations/terraform.png"
       title: "Terraform"
-      fulltitle: "Formation Terraform : 6 et 7 Novembre 2018 Paris"
+      fulltitle: "Formation Terraform : 10 et 11 Janvier 2019 Paris"
       short: "Formation Terraform 2 jours"
-      badge-up: "6 <span>et</span> 7"
-      badge-down: "Novembre<br/>2018"
+      badge-up: "10 <span>et</span> 11"
+      badge-down: "Janvier<br/>2019"
+    - link: "/formations/XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 30 janvier au 1er Février 2019 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "30 <span>au</span> 1"
+      badge-down: "Jan-Fév<br/>2019"
+    - link: "/formations/Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker et Kubernetes"
+      fulltitle: "Formation Docker et Kubernetes : 5 au 7 Février 2019 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "5 <span>au</span> 7"
+      badge-down: "Février<br/>2019"
+    - link: "/formations/Ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Ansible"
+      fulltitle: "Formation Ansible : 5 au 6 Mars 2019 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "5 <span>et</span> 6"
+      badge-down: "Mars<br/>2019"
+
+
 ---
 
   <section  id="formations-top">
