--- a/formations.html
+++ b/formations.html
@@ -3,26 +3,19 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Kubernetes.html"
-      img: "/images/formations/kubernetes.png"
-      title: "Kubernetes"
-      fulltitle: "Formation Kubernetes : 11 et 12 Décembre 2018 Paris"
-      short: "Formation Kubernetes 2 jours"
-      badge-up: "11 <span>et</span> 12"
-      badge-down: "Décembre<br/>2018"
-    - link: "/formations/XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 13 et 14 Décembre 2018 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "13 <span>et</span> 14"
-      badge-down: "Décembre<br/>2018"
     - link: "/formations/Terraform.html"
       img: "/images/formations/terraform.png"
       title: "Terraform"
       fulltitle: "Formation Terraform : 10 et 11 Janvier 2019 Paris"
       short: "Formation Terraform 2 jours"
       badge-up: "10 <span>et</span> 11"
+      badge-down: "Janvier<br/>2019"
+    - link: "/formations/Kubernetes.html"
+      img: "/images/formations/kubernetes.png"
+      title: "Kubernetes"
+      fulltitle: "Formation Kubernetes : 28 et 29 Janvier 2019 Paris"
+      short: "Formation Kubernetes 2 jours"
+      badge-up: "28 <span>et</span> 29"
       badge-down: "Janvier<br/>2019"
     - link: "/formations/XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
@@ -44,6 +37,13 @@ push-date:
       fulltitle: "Formation Ansible : 5 au 6 Mars 2019 Paris"
       short: "Formation Ansible 2 jours"
       badge-up: "5 <span>et</span> 6"
+      badge-down: "Mars<br/>2019"
+    - link: "/formations/XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 12 et 13 Mars 2019 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "12 <span>et</span> 13"
       badge-down: "Mars<br/>2019"
 
 
