--- a/formations.html
+++ b/formations.html
@@ -45,6 +45,27 @@ push-date:
       short: "Formation XL Release 2 jours"
       badge-up: "12 <span>et</span> 13"
       badge-down: "Mars<br/>2019"
+    - link: "/formations/Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker et Kubernetes"
+      fulltitle: "Formation Docker et Kubernetes : 5 au 7 Février 2019 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "5 <span>au</span> 7"
+      badge-down: "Février<br/>2019"
+    - link: "/formations/Ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Ansible"
+      fulltitle: "Formation Ansible : 5 au 6 Mars 2019 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "5 <span>et</span> 6"
+      badge-down: "Mars<br/>2019"
+    - link: "/formations/XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 12 et 13 Mars 2019 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "12 <span>et</span> 13"
+      badge-down: "Mars<br/>2019"
 
 
 ---
