--- a/formations.html
+++ b/formations.html
@@ -45,27 +45,27 @@ push-date:
       short: "Formation XL Release 2 jours"
       badge-up: "12 <span>et</span> 13"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/Docker-Kubernetes.html"
-      img: "/images/formations/docker-kubernetes.png"
+    - link: "/formations/Kubernetes-advanced.html"
+      img: "/images/formations/Kubernetes-advanced.png"
       title: "Docker et Kubernetes"
-      fulltitle: "Formation Docker et Kubernetes : 5 au 7 Février 2019 Paris"
-      short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "5 <span>au</span> 7"
-      badge-down: "Février<br/>2019"
-    - link: "/formations/Ansible.html"
-      img: "/images/formations/ansible.png"
-      title: "Ansible"
-      fulltitle: "Formation Ansible : 5 au 6 Mars 2019 Paris"
-      short: "Formation Ansible 2 jours"
-      badge-up: "5 <span>et</span> 6"
+      fulltitle: "Formation Kubernertes Advanced : 26 et 27 Mars 2019 Paris"
+      short: "Formation Kubernertes Advanced 2 jours"
+      badge-up: "26 <span>et</span> 27"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 12 et 13 Mars 2019 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "12 <span>et</span> 13"
-      badge-down: "Mars<br/>2019"
+    - link: "/formations/Kubernetes.html"
+      img: "/images/formations/kubernetes.png"
+      title: "Kubernetes"
+      fulltitle: "Formation Kubernetes : 11 et 12 Avril 2019 Paris"
+      short: "Formation Kubernetes 2 jours"
+      badge-up: "11 <span>et</span> 12"
+      badge-down: "Avril<br/>2019"
+    - link: "/formations/Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 25 et 26 Avril 2019 Paris"
+      short: "Formation Terraform 2 jours"
+      badge-up: "25 <span>et</span> 26"
+      badge-down: "Avril<br/>2019"
 
 
 ---
