#52 Remove service picto and links Add cookies policy link Remove old unused pages

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ class: home
 </section>
 
 
-<div class="content" style="padding-top: 0px">
-    <section class="home-layer">
+<div class="content" id="partenaire-aws-gcp">
+    <section class="home-layer" >
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -135,58 +135,6 @@ class: home
                                 technologiques
                                 difficiles.</p>
                             <p class="news-readmore"><a href="//info.wescale.fr/techtrends-cloud" target="_blank">Télécharger</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="home-etapes" id="etapes">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <h1 class="title">Les 3 étapes du service Wescale</h1>
-
-                    <img class="schema" src="{{"/images/schema.png" | relative_url }}" alt="Les 3 étapes du service
-                    Wescale" />
-
-                    <div class="etape-2">
-                        <div class="illustration"><img src="{{"/images/oeil.png"| relative_url }}" alt="01_Identifier"
-                            width="88" height="51" />
-                        </div>
-                        <div>
-                            <h2>Identifier</h2>
-                            <p>Nous réalisons l’étude du SI de l'entreprise, pour définir les meilleurs axes
-                                d'améliorations.</p>
-                            <p class="news-readmore"><a href="{{"/services.html"| relative_url }}">En savoir plus</a>
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="etape-3">
-                        <div class="illustration"><img src="{{"/images/engrenage.png"| relative_url }}"
-                            alt="02_Réaliser" width="66" height="66" />
-                        </div>
-                        <div>
-                            <h2>Réaliser</h2>
-                            <p>Nos consultants prennent part à la mise en place des services Cloud préconisés quelle que
-                                soit la plate-forme choisie.</p>
-                            <p class="news-readmore"><a href="{{"/services.html"| relative_url }}">En savoir plus</a>
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="etape-1">
-                        <div class="illustration"><img src="{{"/images/migrer.png"| relative_url }}" alt="03_Migrer"
-                            width="74" height="62" />
-                        </div>
-                        <div>
-                            <h2>Migrer</h2>
-                            <p>Nous accompagnons nos clients afin d’opérer les changements techniques et humains induits
-                                par les nouveaux services mis en place.</p>
-                            <p class="news-readmore"><a href="{{"/services.html"| relative_url }}">En savoir plus</a>
                             </p>
                         </div>
                     </div>
