#57 Replace home page recruitment block

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ class: home
     </section>
 
     <section class="home-profils">
-        <div class="container">
+<!--        <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                     <h1 class="title"><a id="rejoignez-nous" href="{{"/wetribu.html"| relative_url }}">Rejoignez
@@ -199,7 +199,96 @@ class: home
                 </div>
             </div>
 
+        </div>-->
+        <div class="container-fluid content portfolio-container">
+        <div class="row padding-btm">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading text-uppercase">Découvrez nos postes ouverts</h2>
+            </div>
         </div>
+        <div class="row no-gutters rolldown-gallery">
+
+            <div class="col-md-4 col-sm-4 portfolio-item" id="cloud-designer"
+                 data-content="#content-cloud-designer">
+                <a class="portfolio-link" href="#">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-plus fa-3x"></i>
+                            <h2>Cloud Designer</h2>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="{{"/images/wetribu/Cosmonaute_1.png"| relative_url}}" alt="">
+
+                    <div class="portfolio-caption min-pad caption-bg-transp">
+                        <h3>Cloud Designer</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="gridder-content col-md-12 col-sm-12 caption-bg-transp" id="content-cloud-designer" style="display: none;">
+                <div class="col-md-4 middle">
+<a href="https://wescale.welcomekit.co/jobs/cloud-designer_paris_WESCA_780wXyk" class="job-button" target="_blank">
+                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Designer</a>
+                </div>
+                <div class="col-md-8 ">
+Savoir quelle planète aborder dans la constellation du Cloud n’est pas chose simple.
+Le Designer est un expert chevronné qui a déjà accompagné plusieurs expéditions. Il aide à déterminer le meilleur angle d’approche et la cargaison à embarquer vers une architecture idéale.                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-4 portfolio-item" id="cloud-builder"
+                 data-content="#content-cloud-builder">
+                <a class="portfolio-link" href="#">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-plus fa-3x"></i>
+                            <h2>Cloud Builder</h2>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="{{"/images/wetribu/Cosmonaute_2.png"| relative_url}}" alt="">
+
+                    <div class="portfolio-caption min-pad caption-bg-transp">
+                        <h3>Cloud Builder</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="gridder-content col-md-12 col-sm-12 caption-bg-transp" id="content-cloud-builder" style="display: none;">
+                <div class="col-md-4 middle">
+<a href="https://wescale.welcomekit.co/jobs/cloud-builder_paris" class="job-button" target="_blank">
+                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Builder</a>
+                </div>
+                <div class="col-md-8 ">
+C'est l'explorateur de la mission, il atterrit en premier sur la planète Cloud.
+Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterrissage et baliser le chemin. Il éclaircit, aplanit et trouve des solutions pour surmonter chaque obstacle rencontré.                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-4 portfolio-item" id="cloud-runner"
+                 data-content="#content-cloud-runner">
+                <a class="portfolio-link" href="#">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-plus fa-3x"></i>
+                            <h2>Cloud Runner</h2>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="{{"/images/wetribu/cosmonaute_33.png"| relative_url}}" alt="">
+
+                    <div class="portfolio-caption min-pad caption-bg-transp">
+                        <h3>Cloud Runner</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="gridder-content col-md-12 col-sm-12 caption-bg-transp" id="content-cloud-runner" style="display: none;">
+                <div class="col-md-4 middle">
+                    <!--<img src="/images/wetribu/Cosmonaute_33.png">-->
+                    <a href="https://wescale.welcomekit.co/jobs/cloud-runner_paris_WESCA_KrPy00j" class="job-button" target="_blank">
+                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Runner</a>
+                </div>
+                <div class="col-md-8 ">
+Une fois arrivé dans le Cloud, il est facile de se laisser déborder par la complexité de ce nouveau monde.
+Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapidement, en gardant un oeil d’expert technique sur les opérations.                </div>
+            </div>
+
+        </div>
+    </div>
     </section>
 
     <section class="home-partenaires">
