--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: default
 title: Wescale - Expert Cloud et DevOps
 class: home
+jobs_url:
+  designer: https://wescale.welcomekit.co/jobs/cloud-designer_paris_WESCA_780wXyk
+  builder: https://wescale.welcomekit.co/jobs/cloud-builder_paris
+  runner: https://wescale.welcomekit.co/jobs/cloud-runner_paris_WESCA_KrPy00j
 ---
 <section class="home-top">
     <div class="container">
@@ -144,76 +148,22 @@ class: home
     </section>
 
     <section class="home-profils">
-<!--        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <h1 class="title"><a id="rejoignez-nous" href="{{"/wetribu.html"| relative_url }}">Rejoignez
-                        nous !</a></h1>
-                    <p><a id="rejoignez-nous-2" href="{{"/wetribu.html"| relative_url }}">Envie de vous renouveler ?
-                        Rejoignez les Scalers !</a></p>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <h2>
-                        <a id="rejoignez-nous-6" href="{{"/wetribu.html"| relative_url }}">
-                            Cloud <span class="bold">Designer</span>
-                        </a></h2>
-                    <a id="rejoignez-nous-3" href="{{"/wetribu.html"| relative_url }}">
-                        <img src="{{"/images/cloud-designer.png"| relative_url }}" alt="Cloud Designer" /></a>
-                    <p><a id="rejoignez-nous-7" href="{{"/wetribu.html"| relative_url }}">
-                        Vous avez une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
-                        solides bases techniques Cloud pour être à même de proposer des processus et des architectures
-                        réalistes, bâties pour tenir et durer.</a></p>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <h2>
-                        <a id="rejoignez-nous-8" href="{{"/wetribu.html"| relative_url }}">
-                            Cloud <span class="bold">Builder</span
-                        ></a>
-                    </h2>
-                    <a id="rejoignez-nous-4" href="{{"/wetribu.html"| relative_url }}">
-                        <img src="{{"/images/cloud-builder.png"| relative_url }}" alt="Cloud Builder" /></a>
-                    <p>
-                        <a id="rejoignez-nous-9" href="{{"/wetribu.html"| relative_url }}">
-                            Vous connaissez les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Vous
-                            aimez les
-                            approches orientées services. Vous êtes bilingues DevOps. Venez construire et mettre en
-                            place des
-                            solutions Cloud.</a></p>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <h2>
-                        <a id="rejoignez-nous-10" href="{{"/wetribu.html"| relative_url }}">
-                            Cloud <span class="bold">Runner</span>
-                        </a>
-                    </h2>
-                    <a id="rejoignez-nous-5" href="{{"/wetribu.html"| relative_url }}">
-                        <img src="{{"/images/cloud-runner.png"| relative_url }}" alt="Cloud Runner" /></a>
-                    <p>
-                        <a id="rejoignez-nous-11" href="{{"/wetribu.html"| relative_url }}">
-                            Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le
-                            goût des
-                            prods bien huilées et sécurisées. Vous aimez les architectures qui en imposent.
-                            Venez opèrer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
-                        </a>
-                    </p>
-                </div>
-            </div>
-
-        </div>-->
         <div class="container-fluid content portfolio-container">
         <div class="row padding-btm">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Découvrez nos postes ouverts</h2>
+                <h2 class="section-heading text-uppercase">
+                    <a href="{{"/wetribu.html"| relative_url }}">Rejoignez la WeTribu</a>
+                </h2>
             </div>
         </div>
         <div class="row no-gutters rolldown-gallery">
 
             <div class="col-md-4 col-sm-4 portfolio-item" id="cloud-designer"
                  data-content="#content-cloud-designer">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="{{page.jobs_url.designer}}" target="_blank">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
+                            <i class="fa fa-external-link fa-3x"></i>
                             <h2>Cloud Designer</h2>
                         </div>
                     </div>
@@ -221,25 +171,21 @@ class: home
 
                     <div class="portfolio-caption min-pad caption-bg-transp">
                         <h3>Cloud Designer</h3>
+                        <p>
+                         Vous avez une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
+                        solides bases techniques Cloud pour être à même de proposer des processus et des architectures
+                        réalistes, bâties pour tenir et durer.
+                        </p>
                     </div>
                 </a>
-            </div>
-            <div class="gridder-content col-md-12 col-sm-12 caption-bg-transp" id="content-cloud-designer" style="display: none;">
-                <div class="col-md-4 middle">
-<a href="https://wescale.welcomekit.co/jobs/cloud-designer_paris_WESCA_780wXyk" class="job-button" target="_blank">
-                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Designer</a>
-                </div>
-                <div class="col-md-8 ">
-Savoir quelle planète aborder dans la constellation du Cloud n’est pas chose simple.
-Le Designer est un expert chevronné qui a déjà accompagné plusieurs expéditions. Il aide à déterminer le meilleur angle d’approche et la cargaison à embarquer vers une architecture idéale.                </div>
             </div>
 
             <div class="col-md-4 col-sm-4 portfolio-item" id="cloud-builder"
                  data-content="#content-cloud-builder">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="{{page.jobs_url.builder}}" target="_blank">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
+                            <i class="fa fa-external-link fa-3x"></i>
                             <h2>Cloud Builder</h2>
                         </div>
                     </div>
@@ -247,25 +193,23 @@ Le Designer est un expert chevronné qui a déjà accompagné plusieurs expédit
 
                     <div class="portfolio-caption min-pad caption-bg-transp">
                         <h3>Cloud Builder</h3>
+                        <p>
+                            Vous connaissez les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Vous
+                            aimez les
+                            approches orientées services. Vous êtes bilingues DevOps. Venez construire et mettre en
+                            place des
+                            solutions Cloud.
+                        </p>
                     </div>
                 </a>
-            </div>
-            <div class="gridder-content col-md-12 col-sm-12 caption-bg-transp" id="content-cloud-builder" style="display: none;">
-                <div class="col-md-4 middle">
-<a href="https://wescale.welcomekit.co/jobs/cloud-builder_paris" class="job-button" target="_blank">
-                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Builder</a>
-                </div>
-                <div class="col-md-8 ">
-C'est l'explorateur de la mission, il atterrit en premier sur la planète Cloud.
-Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterrissage et baliser le chemin. Il éclaircit, aplanit et trouve des solutions pour surmonter chaque obstacle rencontré.                </div>
             </div>
 
             <div class="col-md-4 col-sm-4 portfolio-item" id="cloud-runner"
                  data-content="#content-cloud-runner">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="{{page.jobs_url.runner}}" target="_blank">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
+                            <i class="fa fa-external-link fa-3x"></i>
                             <h2>Cloud Runner</h2>
                         </div>
                     </div>
@@ -273,18 +217,14 @@ Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterri
 
                     <div class="portfolio-caption min-pad caption-bg-transp">
                         <h3>Cloud Runner</h3>
+                        <p>
+                            Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le
+                            goût des
+                            prods bien huilées et sécurisées. Vous aimez les architectures qui en imposent.
+                            Venez opèrer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
+                        </p>
                     </div>
                 </a>
-            </div>
-            <div class="gridder-content col-md-12 col-sm-12 caption-bg-transp" id="content-cloud-runner" style="display: none;">
-                <div class="col-md-4 middle">
-                    <!--<img src="/images/wetribu/Cosmonaute_33.png">-->
-                    <a href="https://wescale.welcomekit.co/jobs/cloud-runner_paris_WESCA_KrPy00j" class="job-button" target="_blank">
-                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Runner</a>
-                </div>
-                <div class="col-md-8 ">
-Une fois arrivé dans le Cloud, il est facile de se laisser déborder par la complexité de ce nouveau monde.
-Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapidement, en gardant un oeil d’expert technique sur les opérations.                </div>
             </div>
 
         </div>
