--- a/wetribu.html
+++ b/wetribu.html
@@ -2,6 +2,10 @@
 layout: default
 title: Recrutement - Wescale - Improve Together
 class: job
+jobs_url:
+  designer: https://wescale.welcomekit.co/jobs/cloud-designer_paris_WESCA_780wXyk
+  builder: https://wescale.welcomekit.co/jobs/cloud-builder_paris
+  runner: https://wescale.welcomekit.co/jobs/cloud-runner_paris_WESCA_KrPy00j
 ---
 <section id="recrutement-top">
     <div class="container">
@@ -66,7 +70,7 @@ class: job
             </div>
             <div class="gridder-content col-md-12 col-sm-12 " id="content-cloud-designer" style="display: none;">
                 <div class="col-md-4 middle">
-<a href="https://wescale.welcomekit.co/jobs/cloud-designer_paris_WESCA_780wXyk" class="job-button" target="_blank">
+<a href="{{page.jobs_url.designer}}" class="job-button" target="_blank">
                          <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Designer</a>
                 </div>
                 <div class="col-md-8 ">
@@ -92,7 +96,7 @@ Le Designer est un expert chevronné qui a déjà accompagné plusieurs expédit
             </div>
             <div class="gridder-content col-md-12 col-sm-12" id="content-cloud-builder" style="display: none;">
                 <div class="col-md-4 middle">
-<a href="https://wescale.welcomekit.co/jobs/cloud-builder_paris" class="job-button" target="_blank">
+<a href="{{page.jobs_url.builder}}" class="job-button" target="_blank">
                          <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Builder</a>
                 </div>
                 <div class="col-md-8 ">
@@ -119,7 +123,7 @@ Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterri
             <div class="gridder-content col-md-12 col-sm-12" id="content-cloud-runner" style="display: none;">
                 <div class="col-md-4 middle">
                     <!--<img src="/images/wetribu/Cosmonaute_33.png">-->
-                    <a href="https://wescale.welcomekit.co/jobs/cloud-runner_paris_WESCA_KrPy00j" class="job-button" target="_blank">
+                    <a href="{{page.jobs_url.runner}}" class="job-button" target="_blank">
                          <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Runner</a>
                 </div>
                 <div class="col-md-8 ">
