--- a/formations.html
+++ b/formations.html
@@ -45,11 +45,11 @@ push-date:
       short: "Formation XL Release 2 jours"
       badge-up: "12 <span>et</span> 13"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/kubernetes-advanced.html"
-      img: "/images/formations/kubernetes-advanced_white.png"
-      title: "Kubernetes Advanced"
-      fulltitle: "Formation Kubernetes Advanced : 26 et 27 Mars 2019 Paris"
-      short: "Formation Kubernetes Advanced 2 jours"
+    - link: "/formations/kubernetes-advancee.html"
+      img: "/images/formations/Kubernetes-avancee-white.png"
+      title: "Kubernetes Advancée"
+      fulltitle: "Formation Kubernetes Avancée : 26 et 27 Mars 2019 Paris"
+      short: "Formation Kubernetes Avancée 2 jours"
       badge-up: "26 <span>et</span> 27"
       badge-down: "Mars<br/>2019"
     - link: "/formations/Kubernetes.html"
