--- a/formations.html
+++ b/formations.html
@@ -3,20 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 10 et 11 Janvier 2019 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "10 <span>et</span> 11"
-      badge-down: "Janvier<br/>2019"
-    - link: "/formations/Kubernetes.html"
-      img: "/images/formations/kubernetes.png"
-      title: "Kubernetes"
-      fulltitle: "Formation Kubernetes : 28 et 29 Janvier 2019 Paris"
-      short: "Formation Kubernetes 2 jours"
-      badge-up: "28 <span>et</span> 29"
-      badge-down: "Janvier<br/>2019"
     - link: "/formations/XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
@@ -34,7 +20,7 @@ push-date:
     - link: "/formations/Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
-      fulltitle: "Formation Ansible : 5 au 6 Mars 2019 Paris"
+      fulltitle: "Formation Ansible : 5 et 6 Mars 2019 Paris"
       short: "Formation Ansible 2 jours"
       badge-up: "5 <span>et</span> 6"
       badge-down: "Mars<br/>2019"
@@ -66,7 +52,20 @@ push-date:
       short: "Formation Terraform 2 jours"
       badge-up: "25 <span>et</span> 26"
       badge-down: "Avril<br/>2019"
-
+    - link: "/formations/Ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Ansible"
+      fulltitle: "Formation Ansible : 9 et 10 Mai 2019 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "9 <span>et</span> 10"
+      badge-down: "Mai<br/>2019"
+    - link: "/formations/Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker et Kubernetes"
+      fulltitle: "Formation Docker et Kubernetes : 22 au 24 Mai 2019 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "22 <span>au</span> 24"
+      badge-down: "Mai<br/>2019"
 
 ---
 
