--- a/formations.html
+++ b/formations.html
@@ -3,13 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 30 janvier au 1er Février 2019 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: "30 <span>au</span> 1"
-      badge-down: "Jan-Fév<br/>2019"
     - link: "/formations/Docker-Kubernetes.html"
       img: "/images/formations/docker-kubernetes.png"
       title: "Docker et Kubernetes"
@@ -17,6 +10,13 @@ push-date:
       short: "Formation Docker Kubernetes 3 jours"
       badge-up: "5 <span>au</span> 7"
       badge-down: "Février<br/>2019"
+    - link: "/formations/XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 26 au 28 Février 2019 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "26 <span>au</span> 28"
+      badge-down: "Fév<br/>2019"
     - link: "/formations/Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
