--- a/formations.html
+++ b/formations.html
@@ -17,11 +17,11 @@ push-date:
       short: "Formation XL Deploy 3 jours"
       badge-up: "26 <span>au</span> 28"
       badge-down: "Fév<br/>2019"
-    - link: "/formations/Ansible.html"
-      img: "/images/formations/ansible.png"
+    - link: "/formations/Kubernetes.html"
+      img: "/images/formations/kubernetes.png"
       title: "Ansible"
-      fulltitle: "Formation Ansible : 5 et 6 Mars 2019 Paris"
-      short: "Formation Ansible 2 jours"
+      fulltitle: "Formation Kubernetes : 5 et 6 Mars 2019 Paris"
+      short: "Formation Kubernetes 2 jours"
       badge-up: "5 <span>et</span> 6"
       badge-down: "Mars<br/>2019"
     - link: "/formations/XL-Release.html"
