--- a/formations.html
+++ b/formations.html
@@ -3,13 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Docker-Kubernetes.html"
-      img: "/images/formations/docker-kubernetes.png"
-      title: "Docker et Kubernetes"
-      fulltitle: "Formation Docker et Kubernetes : 5 au 7 Février 2019 Paris"
-      short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "5 <span>au</span> 7"
-      badge-down: "Février<br/>2019"
     - link: "/formations/XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
@@ -65,6 +58,13 @@ push-date:
       fulltitle: "Formation Docker et Kubernetes : 22 au 24 Mai 2019 Paris"
       short: "Formation Docker Kubernetes 3 jours"
       badge-up: "22 <span>au</span> 24"
+      badge-down: "Mai<br/>2019"
+    - link: "/formations/Docker-Kubernetes.html"
+      img: "/images/formations/microservices.png"
+      title: "Microservices"
+      fulltitle: "Formation Microservices : 4 au 6 Mai 2019 Paris"
+      short: "Formation Microservices 3 jours"
+      badge-up: "4 <span>au</span> 6"
       badge-down: "Mai<br/>2019"
 
 ---
