--- a/formations.html
+++ b/formations.html
@@ -3,14 +3,14 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Terraform.html"
+    - link: "/formations/Formation-Terraform.html"
       img: "/images/formations/terraform.png"
-      title: "Terraform"
+      title: "Formation Terraform"
       fulltitle: "Formation Terraform : 10 et 11 Janvier 2019 Paris"
       short: "Formation Terraform 2 jours"
       badge-up: "10 <span>et</span> 11"
       badge-down: "Janvier<br/>2019"
-    - link: "/formations/Kubernetes.html"
+    - link: "/formations/Formation-Kubernetes.html"
       img: "/images/formations/kubernetes.png"
       title: "Kubernetes"
       fulltitle: "Formation Kubernetes : 28 et 29 Janvier 2019 Paris"
@@ -24,44 +24,44 @@ push-date:
       short: "Formation XL Deploy 3 jours"
       badge-up: "30 <span>au</span> 1"
       badge-down: "Jan-Fév<br/>2019"
-    - link: "/formations/Docker-Kubernetes.html"
+    - link: "/formations/Formation-Docker-Kubernetes.html"
       img: "/images/formations/docker-kubernetes.png"
-      title: "Docker et Kubernetes"
+      title: "Formation Docker et Kubernetes"
       fulltitle: "Formation Docker et Kubernetes : 5 au 7 Février 2019 Paris"
       short: "Formation Docker Kubernetes 3 jours"
       badge-up: "5 <span>au</span> 7"
       badge-down: "Février<br/>2019"
-    - link: "/formations/Ansible.html"
+    - link: "/formations/Formation-Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
       fulltitle: "Formation Ansible : 5 au 6 Mars 2019 Paris"
       short: "Formation Ansible 2 jours"
       badge-up: "5 <span>et</span> 6"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/XL-Release.html"
+    - link: "/formations/Formation-XL-Release.html"
       img: "/images/formations/xl-release.png"
-      title: "XL Release"
+      title: "Formation XL Release"
       fulltitle: "Formation XL Release : 12 et 13 Mars 2019 Paris"
       short: "Formation XL Release 2 jours"
       badge-up: "12 <span>et</span> 13"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/kubernetes-advancee.html"
+    - link: "/formations/Formation-kubernetes-advancee.html"
       img: "/images/formations/Kubernetes-avancee-white.png"
-      title: "Kubernetes Advancée"
+      title: "Formation Kubernetes Advancée"
       fulltitle: "Formation Kubernetes Avancée : 26 et 27 Mars 2019 Paris"
       short: "Formation Kubernetes Avancée 2 jours"
       badge-up: "26 <span>et</span> 27"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/Kubernetes.html"
+    - link: "/formations/Formation-Kubernetes.html"
       img: "/images/formations/kubernetes.png"
-      title: "Kubernetes"
+      title: "Formation Kubernetes"
       fulltitle: "Formation Kubernetes : 11 et 12 Avril 2019 Paris"
       short: "Formation Kubernetes 2 jours"
       badge-up: "11 <span>et</span> 12"
       badge-down: "Avril<br/>2019"
-    - link: "/formations/Terraform.html"
+    - link: "/formations/Formation-Terraform.html"
       img: "/images/formations/terraform.png"
-      title: "Terraform"
+      title: "Formation Terraform"
       fulltitle: "Formation Terraform : 25 et 26 Avril 2019 Paris"
       short: "Formation Terraform 2 jours"
       badge-up: "25 <span>et</span> 26"
