--- a/formations.html
+++ b/formations.html
@@ -17,7 +17,7 @@ push-date:
       short: "Formation Kubernetes 2 jours"
       badge-up: "28 <span>et</span> 29"
       badge-down: "Janvier<br/>2019"
-    - link: "/formations/XL-Deploy.html"
+    - link: "/formations/Formation-XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
       fulltitle: "Formation XL Deploy : 30 janvier au 1er Février 2019 Paris"
