--- a/formations.html
+++ b/formations.html
@@ -3,70 +3,69 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Formation Terraform"
-      fulltitle: "Formation Terraform : 10 et 11 Janvier 2019 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "10 <span>et</span> 11"
-      badge-down: "Janvier<br/>2019"
-    - link: "/formations/Formation-Kubernetes.html"
-      img: "/images/formations/kubernetes.png"
-      title: "Kubernetes"
-      fulltitle: "Formation Kubernetes : 28 et 29 Janvier 2019 Paris"
-      short: "Formation Kubernetes 2 jours"
-      badge-up: "28 <span>et</span> 29"
-      badge-down: "Janvier<br/>2019"
-    - link: "/formations/Formation-XL-Deploy.html"
+    - link: "/formations/XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 30 janvier au 1er Février 2019 Paris"
+      fulltitle: "Formation XL Deploy : 26 au 28 Février 2019 Paris"
       short: "Formation XL Deploy 3 jours"
-      badge-up: "30 <span>au</span> 1"
-      badge-down: "Jan-Fév<br/>2019"
-    - link: "/formations/Formation-Docker-Kubernetes.html"
-      img: "/images/formations/docker-kubernetes.png"
-      title: "Formation Docker et Kubernetes"
-      fulltitle: "Formation Docker et Kubernetes : 5 au 7 Février 2019 Paris"
-      short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "5 <span>au</span> 7"
-      badge-down: "Février<br/>2019"
-    - link: "/formations/Formation-Ansible.html"
-      img: "/images/formations/ansible.png"
+      badge-up: "26 <span>au</span> 28"
+      badge-down: "Fév<br/>2019"
+    - link: "/formations/Kubernetes.html"
+      img: "/images/formations/kubernetes.png"
       title: "Ansible"
-      fulltitle: "Formation Ansible : 5 au 6 Mars 2019 Paris"
-      short: "Formation Ansible 2 jours"
+      fulltitle: "Formation Kubernetes : 5 et 6 Mars 2019 Paris"
+      short: "Formation Kubernetes 2 jours"
       badge-up: "5 <span>et</span> 6"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/Formation-XL-Release.html"
+    - link: "/formations/XL-Release.html"
       img: "/images/formations/xl-release.png"
-      title: "Formation XL Release"
+      title: "XL Release"
       fulltitle: "Formation XL Release : 12 et 13 Mars 2019 Paris"
       short: "Formation XL Release 2 jours"
       badge-up: "12 <span>et</span> 13"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/Formation-Kubernetes-avancee.html"
+    - link: "/formations/Kubernetes-avancee.html"
       img: "/images/formations/Kubernetes-avancee-white.png"
-      title: "Formation Kubernetes Advancée"
+      title: "Kubernetes Advancée"
       fulltitle: "Formation Kubernetes Avancée : 26 et 27 Mars 2019 Paris"
       short: "Formation Kubernetes Avancée 2 jours"
       badge-up: "26 <span>et</span> 27"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/Formation-Kubernetes.html"
+    - link: "/formations/Kubernetes.html"
       img: "/images/formations/kubernetes.png"
-      title: "Formation Kubernetes"
+      title: "Kubernetes"
       fulltitle: "Formation Kubernetes : 11 et 12 Avril 2019 Paris"
       short: "Formation Kubernetes 2 jours"
       badge-up: "11 <span>et</span> 12"
       badge-down: "Avril<br/>2019"
-    - link: "/formations/Formation-Terraform.html"
+    - link: "/formations/Terraform.html"
       img: "/images/formations/terraform.png"
-      title: "Formation Terraform"
+      title: "Terraform"
       fulltitle: "Formation Terraform : 25 et 26 Avril 2019 Paris"
       short: "Formation Terraform 2 jours"
       badge-up: "25 <span>et</span> 26"
       badge-down: "Avril<br/>2019"
-
+    - link: "/formations/Ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Ansible"
+      fulltitle: "Formation Ansible : 9 et 10 Mai 2019 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "9 <span>et</span> 10"
+      badge-down: "Mai<br/>2019"
+    - link: "/formations/Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker et Kubernetes"
+      fulltitle: "Formation Docker et Kubernetes : 22 au 24 Mai 2019 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "22 <span>au</span> 24"
+      badge-down: "Mai<br/>2019"
+    - link: "/formations/Microservices.html"
+      img: "/images/formations/microservices.png"
+      title: "Microservices"
+      fulltitle: "Formation Microservices : 4 au 6 Juin 2019 Paris"
+      short: "Formation Microservices 3 jours"
+      badge-up: "4 <span>au</span> 6"
+      badge-down: "Juin<br/>2019"
 
 ---
 
@@ -169,4 +168,3 @@ push-date:
         </div>
     </div>
       </section>
-
