Refresh look'n'feel of the corporate site

--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,22 @@ layout: default
 title: Contact - Wescale - Cloud expert
 class: contact
 ---
+<section id="mission" class="mission-top">
+     <div class="container">
 
+        <div class="row">
+            <div class="col-md-12 home-content text-center">
+                <h1 class="title bold">Nous sommes toujours à votre écoute,<br/> parlons Cloud ...</h1>
+            </div>
+        </div>
+     </div>
+
+</section>
     <div class="content">
       <section>
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="title">Contactez-nous</h1>
 
               <h2>Formulaire de contact</h2>
             </div>
