--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ jobs_url:
             <div class="col-md-12 home-content">
                 <h1 class="title">Experts Cloud et DevOps</h1>
                 <h2 class="home-text">
-                    Nous construisons des infrastructures et des services Cloud de qualité.
+                    Nous construisons avec vous le système d’information de demain.
                 </h2>
 
                 <p class="more">
