--- a/mission.html
+++ b/mission.html
@@ -9,18 +9,20 @@ img_improve: /images/mission/pola-wescale.png
 
         <div class="row">
             <div class="col-md-12 home-content text-center">
-                <h1 class="title bold">Notre mission</h1>
-                <h2 class="title">
-                    <b>Enrichir</b> et <b>rendre</b> accessible à tous le <b>savoir-faire</b><br/>
+                <h1 class="title no-bold">
+                    Nous voulons <b>enrichir</b> et <b>rendre</b> accessible à tous le <b>savoir-faire</b><br/>
                     pour faire vivre <b>l’innovation</b> au coeur des <b>systèmes d’information</b>.
+                </h1>
+                <h2 class="title">
+
                 </h2>
 
-                <p class="more">
+             <!--   <p class="more">
                     <a id="it-btn" href="#improve-together">
                         <img src="{{"/images/more.png" | relative_url }}" alt="Improve Together" width="52"
                         height="44" /><br/>
                         IMPROVE TOGETHER</a>
-                </p>
+                </p>-->
             </div>
         </div>
      </div>
