--- a/wetribu.html
+++ b/wetribu.html
@@ -13,12 +13,12 @@ jobs_url:
             <div class="col-md-12 text-center home-content">
                 <h1 class="title bold">Découvrez la #WeTribu</h1>
 
-                <p class="more">
+         <!--       <p class="more">
                     <a id="it-btn" href="#nos-offres">
                         <img src="{{"/images/more.png" | relative_url }}" alt="En savoir plus" width="52"
                         height="44" /><br/>
                         En savoir plus</a>
-                </p>
+                </p>-->
             </div>
         </div>
         <div class="row bottom-line">
