Refactor training page and fine tune overall look'n'feel

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@ class: contact
 
         <div class="row">
             <div class="col-md-12 home-content text-center">
-                <h1 class="title bold">Nous sommes toujours à votre écoute,<br/> parlons Cloud ...</h1>
+                <h1 class="title bold">Et si nous parlions Cloud ?</h1>
+                <h2 class="title">Contactez-nous pour vos prochains projets</h2>
             </div>
         </div>
      </div>
@@ -63,8 +64,8 @@ class: contact
               <div class="contactinfo socials">
                 <img src="{{"/images/social.png"| relative_url }}" alt="Réseaux sociaux" />
                 <p>
-                  <a href="https://twitter.com/yeswescale" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                  <a href="https://www.linkedin.com/company/wescale" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  <a href="https://twitter.com/yeswescale" title="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                  <a href="https://www.linkedin.com/company/wescale" title="Linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                 </p>
               </div>
             </div>
