--- a/wetribu.html
+++ b/wetribu.html
@@ -35,7 +35,7 @@ jobs_url:
                     Décider</a></h3>
             </div>
             <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-smile-o" aria-hidden="true"></i>
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="far fa-grin-squint-tears" aria-hidden="true"></i>
                     S'amuser</a></h3>
             </div>
         </div>
@@ -45,11 +45,11 @@ jobs_url:
 <section id="nos-offres">
 
     <div class="container-fluid content bg-gray portfolio-container">
-        <div class="row padding-btm">
+       <!-- <div class="row padding-btm">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Découvrez nos postes ouverts</h2>
             </div>
-        </div>
+        </div>-->
         <div class="row no-gutters rolldown-gallery">
 
             <div class="col-md-4 col-sm-4 portfolio-item white" id="cloud-designer"
@@ -235,7 +235,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                             </p></div>
                     </div>
                     <div class="col-sm-6 col-md-6 col-xs-12">
-                        <div class="icon-holder"><i class="fa fa-smile-o" aria-hidden="true"></i></div>
+                        <div class="icon-holder"><i class="far fa-grin-squint-tears" aria-hidden="true"></i></div>
                         <div class="icon-text">
                             <h3 id="s-amuser">S'amuser !</h3>
                             <p>car nous passons suffisament de temps dans notre vie à
